trying to deploy to heroku again

--- a/views/partials/devoured.handlebars
+++ b/views/partials/devoured.handlebars
@@ -2,7 +2,9 @@
     <ul>
         {{#each burgs}}
         {{#if this.devour}}
+        <li class="mt-4 mb-4">
         <p>{{this.burgname}}</p>
+        </li>
         {{/if}}
         {{/each}}
     </ul>
