--- a/views/partials/pristine.handlebars
+++ b/views/partials/pristine.handlebars
@@ -1,10 +1,14 @@
 <div class="card">
-<ul>
-    {{#each burgs}}
-    {{#unless this.devour}}
-    <p>{{this.burgname}}</p>
-    <button class="devour-button" type="submit" data-id={{this.id}} data-devour={{devour}}>DEVOUR</button>
-    {{/unless}}
-    {{/each}}
-</ul>
+    <ul>
+        {{#each burgs}}
+        {{#unless this.devour}}
+        <li class="mt-4 mb-4">
+            <p>{{this.burgname}}
+            <button class="btn btn-outline-warning devour-button float-right" type="submit" data-id={{this.id}}
+                data-devour={{devour}}>DEVOUR</button>
+            </p>
+        </li>
+        {{/unless}}
+        {{/each}}
+    </ul>
 </div>
