--- a/views/partials/pristine.handlebars
+++ b/views/partials/pristine.handlebars
@@ -3,10 +3,11 @@
         {{#each burgs}}
         {{#unless this.devour}}
         <li class="mt-4 mb-4">
-            <p>{{this.burgname}}
-            <button class="btn btn-outline-warning devour-button float-right" type="submit" data-id={{this.id}}
-                data-devour={{devour}}>DEVOUR</button>
-            </p>
+
+            <p>{{this.burgname}} 
+            <button id="devourbtn" class="btn btn-outline-warning devour-button float-right" type="submit" data-id={{this.id}}
+                data-devour={{devour}}>DEVOUR</button></p>
+
         </li>
         {{/unless}}
         {{/each}}
