change button color

--- a/views/partials/pristine.handlebars
+++ b/views/partials/pristine.handlebars
@@ -5,7 +5,7 @@
         <li class="mt-4 mb-4">
 
             <p>{{this.burgname}} 
-            <button id="devourbtn" class="btn btn-outline-warning devour-button float-right" type="submit" data-id={{this.id}}
+            <button id="devourbtn" class="btn btn-warning devour-button float-right" type="submit" data-id={{this.id}}
                 data-devour={{devour}}>DEVOUR</button></p>
 
         </li>
