--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
 					<input type="text" class="form-control" placeholder="Burger Name" aria-label="Burger Name"
 						id="burgerName">
 					<div class="input">
-						<button class="btn btn-outline-success" type="button" id="addBurger">Add</button>
+						<button class="btn btn-danger" type="button" id="addBurger">Add</button>
 					</div>
 				</div>
 			</div>
