credit for paper style in CSS

--- a/public/assets/css/css.css
+++ b/public/assets/css/css.css
@@ -21,6 +21,8 @@ body {
     font: 12px, sans-serif;
   }
 
+
+  /* card paper styles by Michael MartinSmucker on codepen */
   .card {
     background: #fff;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
